@@ -1,0 +1,24 @@
+# $Id$
+
+SUBDIRS = c_src.dir							\
+	  include.dir							\
+	  src.dir							\
+	  ebin.dir
+CLEAN = $(SUBDIRS:.dir=.clean)
+MAKEFILE = Makefile.win32
+
+all: $(SUBDIRS)
+
+clean: $(CLEAN)
+
+$(SUBDIRS):
+	@echo Making all in $*
+	@cd $*
+	@$(MAKE) /nologo /f $(MAKEFILE) /$(MAKEFLAGS)
+	@cd ..
+
+$(CLEAN):
+	@echo Making clean in $*
+	@cd $*
+	@$(MAKE) /nologo /f $(MAKEFILE) /$(MAKEFLAGS) clean
+	@cd ..
