@@ -1,0 +1,15 @@
+# $Id$
+
+all: exmpp.app exmpp.appup
+
+clean:
+	-del *.beam
+	-del exmpp.app exmpp.appup
+
+exmpp.app: exmpp.app.in
+	@echo Generate: $@
+	cscript /nologo $@.js ../configure.ac $@.in > $@
+
+exmpp.appup: exmpp.appup.in
+	@echo Generate: $@
+	cscript /nologo exmpp.app.js ../configure.ac $@.in > $@
