@@ -1,0 +1,43 @@
+# $Id$
+
+# Erlang environments.
+!IFNDEF ERLANG_ROOT_DIR
+ERLANG_ROOT_DIR = C:\Program Files\erl5.6.2
+!ENDIF
+!IFNDEF ERL
+ERL = "$(ERLANG_ROOT_DIR)\bin\erl.exe"
+!ENDIF
+!IFNDEF ERLC
+ERLC = "$(ERLANG_ROOT_DIR)\bin\erlc.exe"
+!ENDIF
+
+!IFNDEF EMKOPTS_WARNINGS
+EMKOPTS_WARNINGS = report_warnings, {warn_format, 1}, warn_export_vars, warn_shadow_vars, warn_unused_import
+!ENDIF
+!IFNDEF EMKOPTS_DEBUG
+EMKOPTS_DEBUG = debug_info, {d, debug}
+!ENDIF
+
+!IFDEF EMKOPTS
+EMKOPTS = "$(EMKOPTS), $(EMKOPTS_WARNINGS), $(EMKOPTS_DEBUG)"
+!ELSE
+EMKOPTS = "$(EMKOPTS_WARNINGS), $(EMKOPTS_DEBUG)"
+!ENDIF
+
+BUILT_SOURCES = exmpp_known_nss.erl					\
+		exmpp_known_elems.erl					\
+		exmpp_known_attrs.erl
+
+all: Emakefile $(BUILT_SOURCES)
+	$(ERL) -make
+
+clean:
+	-del Emakefile $(BUILT_SOURCES)
+
+Emakefile: Emakefile.in Emakefile.in.js
+	cscript /nologo Emakefile.in.js Emakefile.in $(EMKOPTS) > $@
+
+{..\include\internal}.in.erl:
+	cscript /nologo core\$*.erl.js ..\include\internal\$*.in > $*.erl
+
+.SUFFIXES: .in .erl
