@@ -7,6 +7,11 @@
 	* src/core/exmpp_known_nss.erl.js, src/core/exmpp_known_elems.erl.js,
 	src/core/exmpp_known_attrs.erl.js: Style.
 
+	* Makefile.win32, include/Makefile.win32,
+	include/internal/Makefile.win32, src/Makefile.win32,
+	src/Emakefile.in.js, ebin/Makefile.win32, ebin/exmpp.app.js: Add
+	Makefiles for Windows environments.
+
 2009-01-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_iq.erl: Use correct eDoc types.
